# switchboard-plug-sharing

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  build.sh  meson.build  plug.plugin
.github/workflows/: gettext.yml  main.yml
data/: meson.build  sharing.appdata.xml.in  sharing.metainfo.xml.in
debian/: changelog  control  copyright  rules
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+161 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  btk.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+162 more)
src/: CMakeLists.txt  Plug.vala  meson.build
src/Backend/: HostnameDBusInterface.vala  HostnameManager.vala  RygelConfigFile.vala  RygelDBusInterface.vala  RygelStartupManager.vala  SharingDBusInterface.vala
src/Widgets/: BluetoothPage.vala  DLNAPage.vala  GnomeRemoteDesktopPage.vala  HostnamePage.vala  NetworkAlertView.vala  ServiceEntry.vala  SettingsPage.vala  SettingsView.vala  Sidebar.vala
